--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
 
     // Firebase vision
+    implementation 'com.google.firebase:firebase-ml-common:16.1.2'
     implementation 'com.google.firebase:firebase-ml-vision:17.0.0'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:15.0.0'
 }
