--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -42,6 +46,9 @@ dependencies {
     // Fab
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'org.jetbrains:annotations:15.0'
+
+    // Tensorflow Interpreter
+    implementation 'org.tensorflow:tensorflow-lite:+'
 }
 
 apply plugin: 'com.google.gms.google-services'
